# Mobile-Robot-With-Manipulator

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml
launch/: joint_state_publisher.launch.py
meshes/: arm_base.STL  base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/: IKValidation.py  IK_numerical.py  IKsolver.py  arm_control.py  params.py  pick_place.py  teleop_template.py  test.py  utils.py
urdf/: car.csv  car.urdf.xacro  car_1.urdf.xacro
worlds/: empty_world_test.world
